<resources>
    <string name="app_name">Logica_App</string>
    <string name="TitleString">Conjunction (AND)</string>
    <string name="TitleA">A</string>
    <string name="TitleB">B</string>
    <string name="TitleAB">A^B</string>
    <string name="QuestionT">T</string>
    <string name="QuestionF">F</string>
    <string name="userInput"></string>
    <string name="submitButton">Submit</string>

</resources>
